--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,14 @@ repository               : "sorarain/sorarain.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "eriri.jpg"
+  name             : "Yunbo Hou"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Ms in Peking University"
+  location         : "Beijing, China"
+  employer         : "Peking University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "yunboh@stu.pku.edu.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
